feat: add Spring XML configuration analysis pipeline
- Parse XML bean definitions, scheduled tasks, JMS listeners, and component scans
- Resolve XML-referenced beans to Java sources via BeanDefinitionResolver
- Enrich LLM context with XML findings during enrichment phase
- Surface XML-defined scheduled tasks and JMS listeners as extraction entry points
- Add FindingType constants and execution finding store support for XML artifacts
- Include test fixtures for import-glob, nested-beans, JMS listener, and task-scheduled XMLs